# datastructures

./: Cargo.toml  README.md
benches/: linked_list.rs  packed_linked_list.rs
src/: binary_tree.rs  lib.rs  linked_list.rs
src/linked_list/: mod.rs  test.rs
src/packed_linked_list/: mod.rs  test.rs
